--- a/server/practiceFrontEnd/src/app/test/test.component.html
+++ b/server/practiceFrontEnd/src/app/test/test.component.html
@@ -13,7 +13,7 @@ Enter your URL <input type="text" #url>
         <li *ngFor="let data of reviews.results.data">{{data.text}}</li>
     </ol>
 </div> -->
-
+<h1> Welcome to ReachHigh </h1>
 <div id="main">
 
     <div id="userInput">
