--- a/client/practiceFrontEnd/src/app/test/test.component.html
+++ b/client/practiceFrontEnd/src/app/test/test.component.html
@@ -23,7 +23,7 @@ Enter your URL <input type="text" #url>
 
     <div id="appImage" *ngIf="notNull">
         <!--Application Image/Icon -->
-        <img src={{app.icon}} alt="AppIcon" width="30%" max-height="100%">
+        <img src="{{app.icon}}" alt="AppIcon" width="30%" max-height="100%">
         <h4 id="appName">{{app.title}}</h4>
 
         <div id="confirmation">
