--- a/client/Version 2/src/components/Blog.css
+++ b/client/Version 2/src/components/Blog.css
@@ -1,12 +1,42 @@
 .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.4fr 1.6fr;
-    gap: 33px 10px;
-    grid-template-areas:
-      ". . . ."
-      ;
-      color: rgb(39, 121, 194);
+	background: rgba(255, 255, 255, 0.069);
+	padding: 30px;
+	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.317);
+	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.496);
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.358);
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
+	gap: 0px 50px;
+	border-radius: 5px;
+	height: 1000px;
+	width: 1530px;
+	background-color: #ffffff;
+	display: grid;
+	margin-top: 50px;
+	margin-left: 50px;
+	margin-bottom: 50px;
+	grid-template-areas:
+    ". . ."
+	". . ."
+	". . ."
+  }
+  .BlogHeading{
+	font-size: 40px;
+  }
+  .para1{
+	width: 80%;
+	white-space: normal;
+	font-size: 20px;  
+	text-align: left;
+	text-indent: 80px;
+  }
+  .para2{
+	width: 80%;
+	white-space: normal;
+	font-size: 20px;  
+	
   }
   .classname {
 	-moz-box-shadow: 0px 0px 14px -7px #276873;
