--- a/client/Version 2/src/App.css
+++ b/client/Version 2/src/App.css
@@ -67,6 +67,42 @@ input {
   font-size: 30px;
   text-align: center;
 }
+/* CONFIRMATION */
+
+.allColumn {
+  padding-top: 4em;
+}
+
+.allColumn:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.column,
+.appimage {
+  float: left;
+  width: 33.33%;
+}
+
+.column .Typewriter,
+.appimage .Typewriter,
+.column3 .Typewriter {
+  color: #ffffff;
+  font-size: 20px;
+  padding: 70px;
+}
+
+.appimage {
+  border-left: 1px solid rgb(255, 255, 255);
+  border-right: 1px solid rgb(255, 255, 255);
+  height: 32em;
+  padding-top: 10em;
+}
+
+p {
+  font-size: 25px;
+}
 
 input {
   background-color: #2c3e50;
@@ -184,6 +220,33 @@ legend {
 
 /* RESULTS PAGE END */
 /* +++++++++++++++++++++++++++++++++++++++ */
+
+/* SCROLL BAR */
+
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 
 @keyframes App-logo-spin {
   from {
