--- a/client/Version 2/src/components/AboutUs.css
+++ b/client/Version 2/src/components/AboutUs.css
@@ -1,59 +1,58 @@
 /* ABOUT US PAGE  */
 
 /* width */
-.about-us-main::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 12px;
   background-color: #f5f5f5;
 }
 
 /* Track */
-.about-us-main::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   background-color: #f5f5f5;
 }
 
 /* Handle */
-.about-us-main::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #555;
 }
 
 /* Handle on hover */
-.about-us-main::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
 .about-us-main {
   margin-top: -30px;
-  width: 100%;
+  /* width: 100%;
   height: 100vh;
   scroll-behavior: smooth;
-  overflow: auto;
+  overflow: auto; */
 }
 
 .about-us-first {
   width: 100%;
   height: 100vh;
-  background-size: cover;
+  margin-top: 10em;
 }
 
 .about-us-text1 {
-  padding-bottom: 40px;
 }
 
-#aboutUsH1 {
+.Typewriter {
   padding-top: 5px;
-  color: rgb(233, 136, 97);
+  color: rgb(59, 66, 198);
   text-align: center;
-  margin-bottom: -40px;
   font-size: 3em;
 }
 #aboutUsH2 {
+  margin-top: 10em;
   font-size: 2.5em;
   text-align: center;
-  color: rgb(88, 56, 196);
+  color: rgb(88, 59, 16);
   margin-top: 30px;
 }
 
@@ -62,23 +61,22 @@
   margin-top: -30px;
 }
 
-.ourImage {
-  background: url(../Images/delojan.jpg);
-  height: 80%;
-  width: 70%;
-  background-repeat: no-repeat;
-  margin-left: 15em;
-  margin-top: -3em;
+.about-us-first img {
+  margin-left: 18em;
+}
+
+.about-us-second {
 }
 
 .about-us-third {
   display: grid;
   grid-template-columns: auto auto auto;
-  max-width: 1200px;
   padding: 10px;
+  padding-left: 9em;
+  max-width: 75em;
 }
 .developer {
-  background-color: rgba(164, 156, 156, 0.5);
+  background-color: rgba(164, 156, 156, 0.2);
 
   padding: 30px;
   font-size: 30px;
@@ -86,19 +84,20 @@
 }
 
 .developer img {
-  max-width: 300px;
-  max-height: 300px;
+  max-width: 200px;
+  max-height: 200px;
   width: 100%;
-  border: 2px solid;
 }
 
 #name {
+  font-family: "Courgette", cursive;
   font-size: 25px;
-  padding-right: 1em;
+  margin-top: -5px;
 }
 
 #workTitle {
   font-size: 15px;
+  margin-top: -15px;
 }
 
 /* ABOUT US PAGE END */
