--- a/client/Version 2/src/App.css
+++ b/client/Version 2/src/App.css
@@ -52,16 +52,17 @@ button {
   height: 200px;
   margin-top: -130px;
 }
-.Begin{
+.Begin {
   font-size: 20px;
 }
 .Begin:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-  }
-  .banner{
-    opacity: 0.6;
-    box-shadow: whitesmoke;
-  }
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.banner {
+  opacity: 0.6;
+  box-shadow: whitesmoke;
+}
 
 input {
   margin: 0 50px;
@@ -199,6 +200,7 @@ input {
 
 legend {
   font-size: 1.5em;
+  color: rgb(232, 247, 165);
 }
 
 .calculateProcess {
@@ -206,11 +208,29 @@ legend {
   width: 30%;
   padding: 10px;
   height: 50%;
+  max-height: 650px;
 }
+
+.calculateProcess h4 {
+  font-size: 1.2em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.calculateProcess p {
+  font-size: 1.2em;
+  color: rgb(196, 194, 188);
+  padding: 0.5em;
+}
+
+.calculateProcess ul {
+  font-size: 1.1em;
+  text-align: justify;
+}
+
 .field_set {
   border-color: black;
   border-radius: 10px;
-  height: 500px;
+  height: 41em;
 }
 
 .points {
@@ -219,26 +239,86 @@ legend {
   padding-left: 36px;
   padding-top: 10px;
 }
+
+.left {
+  text-align: justify;
+  float: left;
+}
+
+.right {
+  text-align: justify;
+  float: right;
+}
+
+.right h1 {
+  border: 0.05em solid black;
+  border-radius: 0.2em;
+  margin-right: 1.5em;
+  margin-top: 2em;
+  color: rgb(255, 3, 3);
+}
+
+.left p {
+  font-size: 20px;
+  padding-bottom: 0.5em;
+}
+
+.firstAverage {
+  float: right;
+  padding-left: 9em;
+}
+
+#secondAverage {
+  margin-top: 4em;
+}
+
 .field_set2 {
   border-color: black;
   border-radius: 10px;
-  height: 300px;
+  height: 400px;
 }
 
 .resultsBox {
-  margin-top: 350px;
+  margin-top: 29em;
+  max-width: 28em;
+  margin-left: 432px;
 }
+
+.resultsBox h1 {
+  font-size: 50px;
+  color: rgb(208, 187, 187);
+  padding: 4px;
+  margin-bottom: 2em;
+}
+.resultsBox h2 {
+  font-size: 50px;
+}
+
 .field_set3 {
   border-color: black;
   border-radius: 10px;
-  height: 160px;
+  height: 200px;
 }
 
 .detailedResults {
   float: right;
   width: 30%;
-  padding: 10px;
+  padding: 5px;
   height: 50%;
+  text-align: justify;
+}
+.detailedResults p {
+  font-size: 20px;
+  margin-top: -10px;
+}
+
+.detailedResults h1 {
+  font-size: 25px;
+  color: #0a134a;
+}
+.detailedResults h3 {
+  font-size: 25px;
+  color: #0a134a;
 }
 
 /* RESULTS PAGE END */
