--- a/client/Version 2/src/components/AboutUs.css
+++ b/client/Version 2/src/components/AboutUs.css
@@ -1,5 +1,9 @@
 /* ABOUT US PAGE  */
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Nunito:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
+
 /* width */
 ::-webkit-scrollbar {
   width: 12px;
@@ -44,21 +48,45 @@
 
 .Typewriter {
   padding-top: 5px;
-  color: rgb(59, 66, 198);
+  color: rgb(108, 148, 184);
   text-align: center;
   font-size: 3em;
+  border-bottom: 150px;
+  font-family: "Montserrat", sans-serif;
+}
+#aboutUsH1 {
+  margin-top: 150px;
 }
 #aboutUsH2 {
-  margin-top: 10em;
+  margin-top: 60em;
   font-size: 2.5em;
   text-align: center;
-  color: rgb(88, 59, 16);
+  color: rgb(21, 63, 95);
   margin-top: 30px;
+  margin-bottom: 80px;
+  font-family: "Ubuntu Mono", monospace;
+}
+#aboutUsH4 {
+  margin-top: 5em;
+  font-size: 2.5em;
+  text-align: center;
+  color: rgb(21, 63, 95);
+  margin-bottom: 60px;
+  font-family: "Ubuntu Mono", monospace;
 }
 
 #aboutUsH3 {
   text-align: center;
-  margin-top: -30px;
+  margin-top: 10px;
+  display: grid;
+  background-color: rgba(52, 96, 129, 0.758);
+  background-size: contain;
+  width: 70%;
+  float: inline-end;
+  margin-left: 170px;
+  color: #f5f5f5;
+  margin-bottom: 80px;
+  font-family: "Montserrat", sans-serif;
 }
 
 .about-us-first img {
@@ -76,7 +104,7 @@
   max-width: 75em;
 }
 .developer {
-  background-color: rgba(164, 156, 156, 0.2);
+  background-color: rgba(41, 93, 156, 0.2);
 
   padding: 30px;
   font-size: 30px;
