--- a/reachHigh-heb-app/src/components/Footer/foot.css
+++ b/reachHigh-heb-app/src/components/Footer/foot.css
@@ -31,9 +31,7 @@ body {
   width: 100%;
 }
 
-.rfooter .footer-col ul li:not(:last-child) {
-  margin-bottom: 10px;
-}
+
 
 .rfooter .footer-col ul li a {
   font-size: 16px;
@@ -54,7 +52,7 @@ body {
   height: 40px;
   width: 40px;
   background-color: rgba(255, 255, 255, 0.2);
-  margin: 0 10px 10px 0;
+  margin: 0 10px 0 10px;
   text-align: center;
   line-height: 40px;
   border-radius: 50%;
